--- a/Arnau_potfolio_config.yml
+++ b/Arnau_potfolio_config.yml
@@ -8,10 +8,10 @@
 minimal_mistakes_skin    : "contrast"
 
 # Site Settings
-locale                   : "Madrid"
+locale                   : "Catalunya"
 title                    : "Proyectos Arnau Garriga"
 title_separator          : "-"
-name                     : "Héctor Escaso"
+name                     : "Arnau Garriga Riba"
 description              : "Data Scientist Portfolio"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -84,10 +84,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Héctor Escaso"
-  avatar           : "/images/FotoHector.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  name             : "Arnau Garriga Riba"
+  avatar           : # "/images/FotoArnau.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Scientist Portfolio"
-  location         : "Madrid"
+  location         : "Catalunya"
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
@@ -97,13 +97,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "hescaso"
+  github           : "arnaugr55"
   gitlab           :
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "hectorescasogil" # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
+  linkedin         : https://arnaugr55.github.io/Portfolio/ # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
