--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,34 @@
 theme : jekyll-theme-cayman
+
+# Site Author
+author:
+  name             : "Arnau Garriga Riba"
+  avatar           : "/images/ArnauGarrigaRiba_photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "Data Scientist Portfolio"
+  location         : "Catalunya"
+  email            : agarrigariba@gmail.com
+  uri              :
+  home             : # null (default), "absolute or relative url to link to author home"
+  bitbucket        :
+  codepen          :
+  dribbble         :
+  flickr           :
+  facebook         :
+  foursquare       :
+  github           : "arnaugr55"
+  gitlab           :
+  google_plus      :
+  keybase          :
+  instagram        :
+  lastfm           :
+  linkedin         : https://www.linkedin.com/in/arnau-garriga-riba-9304a5216/
+  pinterest        :
+  soundcloud       :
+  stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
+  steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
+  tumblr           :
+  twitter          :
+  vine             :
+  weibo            :
+  xing             :
+  youtube          : # "https://youtube.com/c/MichaelRoseDesign"
